--- a/site/assets/styles.css
+++ b/site/assets/styles.css
@@ -540,7 +540,7 @@ header {
     /* width: 150px */
     width: 150px;
     font-size: 17px;
-    accent-color: #FF3333;
+    accent-color: #ff3333;
     font-family: Bahnschrift;
     font-weight: 600;
 }
