--- a/site/shop/shop-styles.css
+++ b/site/shop/shop-styles.css
@@ -26,3 +26,61 @@ body {
     justify-self: center;
     /* padding-left: 50px; */
 }
+
+
+.error-popup {
+    position: absolute;
+
+    background-color: rgba(220, 20, 60, 0.452);
+    height: 120px;
+    width: 300px;
+
+    padding: 50px;
+    box-sizing: border-box;
+    backdrop-filter: blur(3px);
+    /* filter:  */
+    box-shadow: 4px 4px 5px rgba(255, 16, 64, 0.24);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+    animation-name: fade-out;
+    /* animation-timing-function: ease-in; */
+    animation-timing-function: cubic-bezier(0.8, 0, 0.95, 0);
+    animation-duration: 5s;
+    opacity: 0;
+    display: none;
+}
+
+.inner-popup {
+    word-wrap: normal;
+    text-align: center;
+    background-color: rgba(165, 42, 42, 0.7);
+    box-shadow: 0px 0px 2px 2px rgba(165, 42, 42, 0.7);
+    border-radius: 10px;
+
+    color: white;
+
+    font-size: 20px;
+    font-family: Bahnschrift;
+
+
+}
+
+.inner-popup a {
+    font-weight: bold;
+    color: white;
+    text-decoration: underline;
+    font-size: 24px;
+}
+
+@keyframes fade-out {
+    from {
+        opacity: 1;
+
+    }
+
+    to {
+        opacity: 0;
+    }
+}
