--- a/site/authorization/auth-styles.css
+++ b/site/authorization/auth-styles.css
@@ -83,7 +83,7 @@ body {
     display: flex;
 }
 
-.ui-container > .active {
+.ui-container>.active {
     top: 0;
     z-index: 50;
     background-color: rgb(255, 255, 255);
@@ -142,6 +142,28 @@ input {
 #registration-error-text {
     color: red;
     font-weight: 700;
+    font-family: 'Bahnschrift';
+    font-style: normal;
+    margin: 5px;
+    font-size: 25px;
+    line-height: 18px;
+    text-align: center;
+}
+
+#already-logged-in {
+    color: rgb(0, 0, 0);
+    font-weight: 300;
+    font-family: 'Bahnschrift';
+    font-style: normal;
+    margin: 5px;
+    font-size: 25px;
+    line-height: 18px;
+    text-align: center;
+}
+
+#already-logged-in .bold {
+    color: rgb(0, 0, 0);
+    font-weight: 500;
     font-family: 'Bahnschrift';
     font-style: normal;
     margin: 5px;
