--- a/site/assets/styles.css
+++ b/site/assets/styles.css
@@ -399,7 +399,7 @@ nav {
 .account-body {
     margin: 0;
 
-    overflow: hidden;
+    overflow: auto;
     position: absolute;
     width: 100%;
     height: 100%;
