--- a/site/assets/styles.css
+++ b/site/assets/styles.css
@@ -559,6 +559,22 @@ header {
     min-width: 100px;
 }
 
+.product-brand-filter:hover,
+.product-brand-filter:focus {
+    /* border: solid violet; */
+    /* position: relative;
+    left: -1px;
+    top: -1px;
+    filter: drop-shadow(2px 2px 1px black); */
+    /* position: relative;
+    left: 1px;
+    top: 1px;
+    filter: drop-shadow(0px 0px 2px grey); */
+    /* box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.4); */
+    box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.3);
+    transition: background-color 0.2s, box-shadow 0.3s ease-in-out;
+}
+
 .cart-list-container,
 .product-list-container {
     display: flex;
@@ -801,4 +817,8 @@ header {
     to {
         opacity: 0;
     }
+}
+
+.logout-button {
+    cursor: pointer;
 }
